--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "https://Schnell10.github.io/portfolio",
+   "homepage": "https://Schnell10.github.io/Portfolio",
    "name": "portfolio",
    "version": "0.1.0",
    "private": true,
