--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "react-scripts": "5.0.1",
       "react-scroll": "^1.9.0",
       "sass": "^1.69.5",
+      "validator": "^13.11.0",
       "web-vitals": "^2.1.4"
    },
    "scripts": {
