--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
    },
    "scripts": {
       "start": "react-scripts start",
-      "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build"
+      "eject": "react-scripts eject"
    },
    "eslintConfig": {
       "extends": [
@@ -49,7 +46,6 @@
       ]
    },
    "devDependencies": {
-      "gh-pages": "^6.1.1",
       "prettier": "^3.0.3"
    }
 }
