--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
    },
    "scripts": {
       "start": "react-scripts start",
+      "build": "react-scripts build",
       "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
    },
    "eslintConfig": {
       "extends": [
@@ -46,6 +49,7 @@
       ]
    },
    "devDependencies": {
+      "gh-pages": "^6.1.1",
       "prettier": "^3.0.3"
    }
 }
