--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d build"
+      "predeploy": "npm run build"
    },
    "eslintConfig": {
       "extends": [
@@ -49,7 +48,6 @@
       ]
    },
    "devDependencies": {
-      "gh-pages": "^6.1.1",
       "prettier": "^3.0.3"
    }
 }
